<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">记账通</string>
    <string name="action_settings">Settings</string>
    <string name="str_title_amount_text">本月支出金额:</string>
    <string name="str_button_add_detail">记一笔</string>
    <string name="str_title_add_detail">新增记录</string>
    <string name="str_tip_input_amount">请输入金额</string>
    <string name="str_amount">0</string>
    <string name="str_tip_choose_type">请选择消费类型</string>
    <string name="str_tip_choose_date">请选择消费日期</string>
    <string name="str_tip_choose_account_type">请选择账户类型</string>
    <string name="str_button_save">保存</string>
    <string name="str_button_record_again">再记一笔</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_index">MainIndexActivity</string>
    <string name="str_title_account_center">账户中心</string>
    <string name="str_title_main_page">账务概况</string>
    <string name="str_title_setting_center">设置中心</string>
    <string name="str_hint_modify_balance">请输入修改后金额(0~1000000)</string>
    <string name="title_activity_show_detail">ShowDetailActivity</string>
    <string name="str_title_show_detail">消费明细</string>
    <string name="str_title_login">登录中心</string>
    <string name="week">周</string>
    <string name="month">月</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="str_main_page_login"><u>登录</u></string>
    <string name="str_button_update_server">同步至服务器</string>
    <string name="str_button_download_local">同步至本地</string>
    <string name="str_button_login">登录</string>
    <string name="str_button_logout">退出登录</string>
    <string name="str_password">密码</string>
    <string name="str_username">用户名</string>
    <string name="str_forget_password"><u>忘记密码</u></string>
    <string name="str_register"><u>注册账号</u></string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="str_title_user_info">个人中心</string>
    <string name="str_title_register">注册</string>
    <string name="str_button_register">点击注册</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="str_hint_add_account">输入新增账户名称</string>

</resources>