<?xml version="1.0" encoding="utf-8" ?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_detail_page"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>
	
    <RelativeLayout 
        android:id="@+id/add_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_style_color"
        android:padding="5dp"
        >
        
        <ImageView 
            android:id="@+id/add_detail_title_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_btn_add_detail_back"
            android:layout_alignParentStart="true"
            />
        
        <TextView 
            android:id="@+id/add_detail_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_title_add_detail"
            android:layout_centerInParent="true"
            style="@style/titleStyle"
            />
        
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/add_detail_item_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_below="@id/add_detail_title"
        android:layout_margin="10dp"
        android:background="@drawable/border"
        >
        <TextView 
            android:id="@+id/add_detail_item_amount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_tip_input_amount"
            android:layout_alignParentStart="true"
            />
        <EditText 
            android:id="@+id/add_detail_item_amount_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:hint="@string/str_amount"
            android:textColorHint="@color/red"
            android:inputType="numberDecimal"
            style="@style/amountStyle"
            android:background="@null"
            android:cursorVisible="false"
            />
        
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/add_detail_item_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_below="@id/add_detail_item_amount"
        android:layout_margin="10dp"
        android:background="@drawable/border"
        >
        <TextView 
            android:id="@+id/add_detail_item_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_tip_choose_type"
            android:layout_alignParentStart="true"
            />
        <Spinner 
            android:id="@+id/add_detail_item_type_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/consume_types"
            android:layout_alignParentEnd="true"
            android:background="@color/red"
            />
        
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/add_detail_item_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_below="@id/add_detail_item_type"
        android:layout_margin="10dp"
        android:background="@drawable/border"
        >
        <TextView 
            android:id="@+id/add_detail_item_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_tip_choose_date"
            android:layout_alignParentStart="true"
            />
        <EditText 
            android:id="@+id/add_detail_item_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:inputType="date"
            />
        
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/add_detail_item_accounttype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_below="@id/add_detail_item_date"
        android:layout_margin="10dp"
        android:background="@drawable/border"
        >
        <TextView 
            android:id="@+id/add_detail_item_accounttype_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_tip_choose_account_type"
            android:layout_alignParentStart="true"
            />
        <Spinner 
            android:id="@+id/add_detail_item_accounttype_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/account_types"
            android:layout_alignParentEnd="true"
            />
        
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/add_detail_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_below="@id/add_detail_item_accounttype"
        android:layout_margin="30dp"
        >
        <Button 
            android:id="@+id/add_detail_button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_button_save"
            android:layout_alignParentStart="true"
            />
        <Button 
            android:id="@+id/add_detail_button_record_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_button_record_again"
            android:layout_alignParentEnd="true"
            />
        
    </RelativeLayout>

</RelativeLayout>