<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/register_center_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_style_color"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/register_title_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:src="@drawable/selector_btn_add_detail_back" />

        <TextView
            style="@style/titleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/str_title_register" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector_edittext_bg"
            android:hint="@string/str_username"
            android:inputType="text"
            android:padding="10dp"
            android:text="engle1" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector_edittext_bg"
            android:hint="@string/str_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:text="123456" />

        <EditText
            android:id="@+id/register_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector_edittext_bg"
            android:hint="@string/str_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:text="123456" />

        <Button
            android:id="@+id/register_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector_main_page_add_detail"
            android:padding="10dp"
            android:text="@string/str_button_register"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>