<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/account_center_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_style_color" >

        <!-- 显示当前年月 -->

        <RelativeLayout
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#f00"
                android:textSize="20pt" />

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/month"
                android:layout_toEndOf="@id/month"
                android:textColor="#0f0"
                android:textSize="10pt" />
        </RelativeLayout>

        <TextView
            style="@style/titleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/str_title_main_page" />
    </RelativeLayout>

    <!-- 第一个框 -->

    <RelativeLayout
        android:id="@+id/summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_center_title"
        android:background="@color/main_style_color"
        android:gravity="center_vertical|center_horizontal"
        android:paddingBottom="30dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="30dp" >

        <!-- 显示支出金额 -->

        <TextView
            android:id="@+id/amountText"
            style="@style/style1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/str_title_amount_text" />

        <TextView
            android:id="@+id/amountValue"
            style="@style/style1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/amountText" />
    </RelativeLayout>

    <!-- 添加明细按钮 -->

    <RelativeLayout
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/summary" >

        <Button
            android:id="@+id/main_add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape"
            android:text="@string/str_button_add_detail"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <!-- 明细 -->

    <RelativeLayout
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add"
        android:layout_margin="10dp" >

        <ListView
            android:id="@+id/detailList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail"
        android:gravity="center_vertical|center_horizontal"
        android:padding="20dp" >

        <Button
            android:id="@+id/main_page_update_to_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="同步至服务器" />

        <Button
            android:id="@+id/main_page_download_to_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/main_page_update_to_server"
            android:text="同步到本地" />
    </RelativeLayout>

</RelativeLayout>